--- a/java-jkle-springboot-learning/pom.xml
+++ b/java-jkle-springboot-learning/pom.xml
@@ -32,9 +32,77 @@
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <version>5.0.4.RELEASE</version>
+        </dependency>
+
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+
+		<!-- temp start -->
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-jdbc</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+		<!--<dependency>-->
+		<!--<groupId>org.hibernate.javax.persistence</groupId>-->
+		<!--<artifactId>hibernate-jpa-2.1-api</artifactId>-->
+		<!--<version>1.0.0.Final</version>-->
+		<!--</dependency>-->
+		<!-- temp end -->
+
+		<!-- excel -->
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi</artifactId>
+			<version>3.15-beta1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-ooxml</artifactId>
+			<version>3.15-beta1</version>
+		</dependency>
+
+		<!--<dependency>-->
+		<!--<groupId>com.sinoservices</groupId>-->
+		<!--<artifactId>jlt-minima-billing-engine-service</artifactId>-->
+		<!--<version>1.0-SNAPSHOT</version>-->
+		<!--</dependency>-->
+		<!--<dependency>-->
+		<!--<groupId>com.sinoservices</groupId>-->
+		<!--<artifactId>jlt-minima-billing-engine-job</artifactId>-->
+		<!--<version>1.0-SNAPSHOT</version>-->
+		<!--</dependency>-->
+
+		<dependency>
+			<groupId>org.hibernate.javax.persistence</groupId>
+			<artifactId>hibernate-jpa-2.1-api</artifactId>
+			<version>1.0.0.Final</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
