--- a/java-jkle-springboot-learning/src/main/resources/application-dev.properties
+++ b/java-jkle-springboot-learning/src/main/resources/application-dev.properties
@@ -1,11 +1,18 @@
+server.port=8080
+server.servlet.context-path=/
+spring.devtools.restart.enabled=true
+spring.devtools.restart.exclude=META-INF/maven/**,META-INF/resources/**,resources/**,static/**,public/**,templates/**,**/*Test.class,**/*Tests.class,git.properties
+
+# spring static resources
+spring.resources.static-locations=classpath:/public/,classpath:/META-INF/public/,classpath:/META-INF/resources/webjars/
+
 #temp start
 spring.datasource.url=jdbc:mysql://localhost:8080/SPRING_BOOT?useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true&zeroDateTimeBehavior=convertToNull
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.hibernate.naming.strategy=org.hibernate.cfg.ImprovedNamingStrategy
-spring.jpa.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+spring.jpa.hibernate.naming.physical-strategy=org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy
 spring.jpa.show-sql=true
 spring.thymeleaf.cache=false
 #temp end
