--- a/java-jkle-springboot-learning/src/main/resources/application-dev.properties
+++ b/java-jkle-springboot-learning/src/main/resources/application-dev.properties
@@ -11,8 +11,16 @@ spring.datasource.url=jdbc:mysql://localhost:8080/SPRING_BOOT?useUnicode=true&ch
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.datasource.max-active=20
+#spring.datasource.max-idle=8
+#spring.datasource.min-idle=8
+#
+#spring.datasource.initial-size=10
+
+#在实体类注解@Entity就会自动进行表的DDL操作了。
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.naming.physical-strategy=org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.show-sql=true
 spring.thymeleaf.cache=false
 #temp end
