--- a/java-jkle-springboot-learning/src/main/resources/application-dev.properties
+++ b/java-jkle-springboot-learning/src/main/resources/application-dev.properties
@@ -6,6 +6,10 @@ spring.devtools.restart.exclude=META-INF/maven/**,META-INF/resources/**,resource
 # spring static resources
 spring.resources.static-locations=classpath:/public/,classpath:/META-INF/public/,classpath:/META-INF/resources/webjars/
 
+#mybatis
+mybatis.type-aliases-package=com.sinoservices.mybatis.domain
+mybatis.mapper-locations=classpath:com/sinoservices/mybatis/mapper/*Mapper.xml
+
 #temp start
 spring.datasource.url=jdbc:mysql://localhost:8080/SPRING_BOOT?useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true&zeroDateTimeBehavior=convertToNull
 spring.datasource.username=root
